# pygmentize-faster

./: README.md  pygmentize_faster.py  pyproject.toml
scripts/: publish.py
