[tool.poetry]
name = "pygmentize-faster"
version = "1.0.1"
description = "Provides a faster version of pygmentize"
authors = ["Josiah Outram Halstead <josiah@halstead.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/joouha/pygmentize-faster"
keywords = ["pygments"]

[tool.poetry.dependencies]
python = "^3.8"
pygments-cache = "^0.1.3"

[tool.poetry.scripts]
pygmentize = 'pygmentize_faster:main'

[tool.poetry.dev-dependencies]
poetry-publish = "^0.5.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
